Added about text

--- a/public/templates/about.hbs
+++ b/public/templates/about.hbs
@@ -11,6 +11,7 @@
 
   <div class="main-content">
   {{>head}}
+  <p>This site was created by me (Ian Halstead). It uses data from mapbox.com and weatherstack.com. I followed Andrew Meads node js course to create the site</p>
   <img src="img/robot.png" class="robot">
   </div>
 
